# dfns-api-gen

./: .gitignore  BETTER_NAMING_DESIGN.md  CLAUDE.md  CODE_GENERATION_ANALYSIS.md  Cargo.toml  DONE.md  IMPROVEMENTS_COMPLETE.md  PHASE1_COMPLETE.md  PHASE2_PROGRESS.md  README.md  WORKSPACE_PLAN.md  build_.rs  config.json  openapi.json  openapi.yml  openapi30.json  openapi30.yml
.cargo/: config.toml
dfns-client/: Cargo.toml
dfns-client/src/: api_server.rs  dfns_gen_ir.json  generated.rs  generated_api.rs  lib.rs
dfns-client/src/client/: challenge.rs  config.rs  error.rs  mod.rs  signer.rs
dfns-gen/: Cargo.toml
dfns-gen/examples/: demo.rs  dfns_client_quickstart.rs  new_pipeline_demo.rs
dfns-gen/src/: api.rs  downgrade.rs  lib.rs  main.rs  selective_typing.rs
dfns-gen/src/codegen/: endpoint_generator.rs  ir_to_ast.rs  new_generator.rs  schema_generator.rs  type_mapper.rs  utils.rs
dfns-gen/src/ir/: endpoints.rs  mod.rs
examples/: better_naming_demo.rs  dfns_client_demo.rs  dfns_with_generated_types.rs  ir_codegen_demo.rs  ir_demo.rs
src/: api.rs  downgrade.rs  generated.rs  generated_api.rs  generated_api.rs.bak  lib.rs  main.rs
src/codegen/: endpoint_generator.rs  ir_to_ast.rs  mod.rs  new_generator.rs  openapi_to_ir.rs  schema_generator.rs  type_mapper.rs  utils.rs
src/ir/: mod.rs  types.rs
