[package]
name = "dfns_gen"
version = "0.1.0"
edition = "2021"
default-run = "convert"

[[bin]]
name = "convert"
path = "src/main.rs"

[[bin]]
name = "api"
path = "src/api.rs"

[[bin]]
name = "selective"
path = "src/selective_typing.rs"

[[bin]]
name = "downgrade"
path = "src/downgrade.rs"

[dependencies]
anyhow = "1.0.100"
axum = "0.8.6"
oas3 = { version = "0.19.0", features = ["yaml-spec"] }
oasert = "0.1.4"
openapi_type_picker = "0.2.4"
openapi31to30 = "0.0.1"
reqwest = "0.12.24"
serde = "1.0.228"
serde_json = "1.0.145"
smart-default = "0.7.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = [
  "chrono",
  "env-filter",
  "json",
  "parking_lot",
  "tracing",
] }
utoipa = "5.4.0"
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
# Code generation dependencies
quote = "1"
syn = { version = "2", features = ["full", "parsing"] }
proc-macro2 = "1"
prettyplease = "0.2"
