[workspace]
resolver = "3"
members = [
  "dfns-client",
  "dfns-gen",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
# Utilities
anyhow = "1.0"
# Web framework
axum = "0.8"
base64 = "0.22"
josekit = "0.10"
# OpenAPI parsing
oas3 = { version = "0.19.0", features = ["yaml-spec"] }
oasert = "0.1.4"
openapi_type_picker = "0.2.4"
openapi31to30 = "0.0.1"
prettyplease = "0.2"
proc-macro2 = "1"
# Code generation
quote = "1"
# HTTP client
reqwest = { version = "0.12", features = ["json"] }
# Client dependencies
reqwest-middleware = "0.4"
reqwest-retry = "0.7"
reqwest-tracing = "0.5"
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smart-default = "0.7"
syn = { version = "2", features = ["full", "parsing"] }
thiserror = "2.0"
# Async runtime
tokio = { version = "1.48", features = ["full"] }
# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
  "chrono",
  "env-filter",
  "json",
  "parking_lot",
  "tracing",
] }
utoipa = "5.4"
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
