[package]
name = "dfns-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Generated DFNS API client with types, server mock, and HTTP client"

[[bin]]
name = "dfns-api-server"
path = "src/api_server.rs"

[dependencies]
# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Async runtime
tokio = { workspace = true }

# HTTP client
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
reqwest-tracing = { workspace = true }

# Web framework (for API server)
axum = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
smart-default = { workspace = true }

# Crypto (for client signing)
josekit = { workspace = true }
base64 = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
